@@ -13,6 +13,9 @@
 * Added Graph#eql? (and ===) to do simple check for graph equality. This version ignores BNodes (like Python librdf)
 * Prepend "named" to named BNodes to ensure no overlap between generated and named BNodes.
 * Added Graph#clone and Triple#clone
+* Merge Graphs, replacing BNodes with new values from new graph.
+* Remove duplicate triples when adding or merging graphs
+
 === 0.1.5
 * Update RDFa tests to use Reddy RDF/XML parser.
 * All negative RDF/XML parser tests pass.
